--- a/src/main/resources/com/example/proyectofinaliii/viewController/anuncios-view.fxml
+++ b/src/main/resources/com/example/proyectofinaliii/viewController/anuncios-view.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyectoFinal_III.ViewController.AnuncioController">
    <children>
       <Label layoutX="113.0" layoutY="40.0" text="PUBLICA TU ANUNCIO">
@@ -16,24 +15,24 @@
       <HBox layoutX="80.0" layoutY="123.0" prefHeight="17.0" prefWidth="298.0">
          <children>
             <Label prefHeight="17.0" prefWidth="150.0" text="NOMBRE" />
-            <TextField />
+            <TextField fx:id="textField_Nombre" />
          </children>
       </HBox>
       <HBox layoutX="80.0" layoutY="174.0" prefHeight="17.0" prefWidth="298.0">
          <children>
             <Label prefHeight="17.0" prefWidth="150.0" text="CODIGO" />
-            <TextField />
+            <TextField fx:id="textField_Codigo" />
          </children>
       </HBox>
       <HBox layoutX="113.0" layoutY="249.0" prefHeight="25.0" prefWidth="373.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="CREAR" />
+            <Button fx:id="btnCrear" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="CREAR" />
             <Label text="  " />
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="ACTUALIZAR" />
+            <Button fx:id="btnActualizar" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="ACTUALIZAR" />
             <Label layoutX="62.0" layoutY="10.0" text="   " />
-            <Button layoutX="79.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="ELIMINAR" />
+            <Button fx:id="btnEliminar" layoutX="79.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="ELIMINAR" />
             <Label layoutX="131.0" layoutY="10.0" text="   " />
-            <Button layoutX="147.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="VOLVER" />
+            <Button fx:id="btnVolver" layoutX="147.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="VOLVER" />
          </children>
       </HBox>
    </children>
